# ssap

./: .clang-format  CMakeLists.txt  LICENSE  protodesc.txt
.github/workflows/: cmake-ubuntu-build-and-test.yml
include/ssap/: participant.hpp
lib/: participant.cpp
lib/crypto/: cipher.hpp  keymanager.cpp  keymanager.hpp  memory.hpp
test/crypto/: cipher_test.cpp  keymanager_test.cpp
